Changed basic to base for extend

--- a/Website/templates/homepage.html
+++ b/Website/templates/homepage.html
@@ -1,4 +1,4 @@
-{% extends "basic.html" %} 
+{% extends "base.html" %} 
 {% block title %} Homepage {% endblock %} 
 {% block content%} 
 <div class="content" id="home">
