--- a/Website/templates/signup.html
+++ b/Website/templates/signup.html
@@ -1,4 +1,4 @@
-{% extends "basic.html" %} 
+{% extends "base.html" %} 
 {% block title %} Sign Up {% endblock %} 
 {% block content%} 
 <form method="POST">
