--- a/Website/templates/testing.html
+++ b/Website/templates/testing.html
@@ -1,4 +1,4 @@
-{% extends "basic.html" %} 
+{% extends "base.html" %} 
 {% block title %} Testing {% endblock %} 
 {% block content%} 
     <h1>This is the the Testing page</h1> 
