--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -33,9 +33,32 @@
     <div class="content" id="favourites"></div>
     <div class="content" id="settings"></div>
     <div class="container">
+        
     {%block content%}
     <h1>ayoo</h1>
     {% endblock %}
+
+    {% with messages = get_flashed_messages(with_categories=true)%}
+        {% if messages %}
+            {% for category, message in messages %}
+                {% if category =='error' %}
+                    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+                    {{ message }}
+                        <button type="button" class="close" data-dismiss="alert">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% else %}
+                    <div class="alert alert-success alter-dismissable fade show" role="alert">
+                    {{ message }}
+                        <button type="button" class="close" data-dismiss="alert">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endif %}
+            {% endfor%}
+        {% endif %}
+    {% endwith %}
     </div>
     <script src={{ url_for('static', filename='script.js')}}></script>
 </body>
