--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -18,6 +18,14 @@
             <i class="fas fa-search search-icon"></i>
             <input type="text" class="search-bar" placeholder="Browse...">
         </div>
+        <div class="user-icon-container">
+            <i class="fas fa-user-alt"></i>
+            <div class="dropdown-menu">
+                <a href="profile.html">Profile</a>
+                <a href="settings.html">Settings</a>
+                <a href="#logout">Logout</a>
+            </div>
+        </div>
     </header>
     <nav id="side-panel">
         <div class="nav-links">
@@ -29,14 +37,9 @@
             <a href="#logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
     </nav>
-    <div class="content" id="homepage"></div>
-    <div class="content" id="favourites"></div>
-    <div class="content" id="settings"></div>
-    <div class="container">
-        
-    {%block content%}
-    <h1>ayoo</h1>
-    {% endblock %}
+    <div class="main-content">
+        {% block content %}{% endblock %}
+    </div>
 
     {% with messages = get_flashed_messages(with_categories=true)%}
         {% if messages %}
