--- a/Website/static/style.css
+++ b/Website/static/style.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     flex-direction: column; /* Ensure header is at the top */
     transition: opacity 0.5s ease-in-out;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 body.fade-out {
@@ -15,13 +16,13 @@ header {
     width: 100%;
     height: 60px; /* Adjust the height as needed */
     background-color: white; /* Change background color to white */
-    position: fixed; /* Fix the bar at the top */
     top: 0;
     left: 0;
-    z-index: 1000; /* Ensure it is above other elements */
     display: flex;
     align-items: center;
     padding: 0 20px;
+    position: relative;
+    z-index: 2;
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.3); /* Add a dark shadow beneath the header */
 }
 
@@ -130,6 +131,28 @@ header {
     display: block;
 }
 
+.categories {
+    padding: 10px;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+}
+
+.category-links a {
+    margin: 0 15px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    border-bottom: 2px solid transparent; /* Add transparent border */
+    padding-bottom: 5px; /* Adjust padding to match border position */
+}
+
+.category-links a:hover,
+.category-links a.active {
+    border-bottom: 3px solid black; /* Show border on hover and active */
+    color: black;
+}
+
 #side-panel {
     overflow-x: hidden;
     background-color: white;
@@ -143,6 +166,7 @@ header {
     left: -200px; /* Initially hide the side panel */
     transition: left 0.3s; /* Smooth transition */
     border-right: 1px solid #333; /* Add a vertical line on the right side */
+    z-index: 1; /* Ensure the side panel is above the content */
 }
 
 #side-panel .nav-links {
@@ -179,10 +203,9 @@ header {
 }
 
 .main-content {
-    margin-left: 250px; /* Same width as the side panel */
+    margin-left: 100px; /* Same width as the side panel */
     padding: 20px;
     flex-grow: 1;
-    margin-top: 60px;
 }
 
 .logout-container {
@@ -207,39 +230,147 @@ header {
 
 .center-container {
     text-align: center; /* Center the text */
+    position: relative;
 }
 
 .center-container h1 {
     font-family: 'Poppins', sans-serif; 
-    font-size: 48px;
+    font-size: 31px;
     font-weight: 800; /* Set font weight to regular */
-    margin: 0; /* Remove default margin */
+    margin: 0px; /* Remove default margin */
     line-height: 1.5; /* Adjust line height for spacing */
 }
 
 .center-container h2 {
     font-family: 'Poppins', sans-serif; 
-    font-size: 100px;
+    font-size: 50px;
     font-weight: 800; /* Set font weight to regular */
-    margin: 0; /* Remove default margin */
-    line-height: 1.5; /* Adjust line height for spacing */
-    padding: 10px 20px; /* Some padding */
+    margin: 0px; /* Remove default margin */
+    line-height: 1.5; /* Adjust line height fo r spacing */
     cursor: pointer;
     color: #02d2ba; /* Purple by default*/
     display: inline-block; /* Reduce hitbox to text size */
+    position: relative;
+    top: -60px;
+    left: 30px;
 }
 
 .center-container h2:hover {
     color: #e38fed; /* Pink on hover */
 }
 
-.center-container p {
+.explore-description {
     font-family: 'Poppins', sans-serif; 
-    font-size: 36px;
+    font-size: 30px;
     font-weight: 400; /* Set font weight to regular */
-    margin: 0; /* Remove default margin */
-    line-height: 1.5; /* Adjust line height for spacing */
+    margin: 0 auto; /* Remove default margin */
+    line-height: 1.4; /* Adjust line height for spacing */
+    padding: 0px; /* Some padding */
+    width: 50%;
 }
+
+/* homepage */
+img.image-1 {
+    width: 150px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    float: left;
+    left: 30px;
+    position: relative;
+    top: 0;
+}
+
+.image-2 {
+    width: 140px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    float: left;
+    left: 140px;
+    position: relative;
+    top: -20px;
+}
+
+.image-3 {
+    width: 120px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    float: left;
+    position: relative;
+    top: 140px;
+    left: -150px;
+}
+
+.image-4 {
+    width: 130px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    bottom: 20px; 
+    float: middle;
+    position: relative;
+    top: 140px;
+    left: -200px;
+}
+
+.image-5 {
+    width: 120px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    float: right;
+    margin-top: -100px; /* Adjust to align beside the explore button */
+    margin-right: 100px; /* Adjust to align beside the explore button */
+}
+
+.image-6 {
+    width: 140px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    float: right;
+    margin-top: -40px;
+    margin-right: 180px;
+    clear: right;
+}
+
+/*end of homepage */
+
+/* signup */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+#popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    z-index: 2;
+    width: 300px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.grayed-out {
+    opacity: 0.5;
+    pointer-events: none;
+}
+
+/* end of signup */
 
 /*profile */
 
@@ -340,9 +471,13 @@ header {
     position: relative;
 }
 
+.btn:hover {
+    cursor: pointer;
+    background-color: #e1dbdb;
+}
+
 .upload-btn {
     padding: 10px;
-    cursor: pointer;
     border: 2px solid transparent; /* Default border */
     background-color: transparent;
     border-radius: 5px; /* Optional: Add rounded corners */
@@ -362,7 +497,6 @@ header {
 
 .delete-btn {
     padding: 10px;
-    cursor: pointer;
     border: 2px solid transparent; /* Default border */
     background-color: transparent;
     border-radius: 5px; /* Optional: Add rounded corners */
@@ -370,7 +504,6 @@ header {
     height: 40px;
     font-size: 15px;
     border-color: #dc3545; /* Red border for delete button */
-
 }
 
 
@@ -441,6 +574,21 @@ header {
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.btn-primary {
+    padding: 5px;
+    border: 2px solid transparent; /* Default border */
+    background-color: transparent;
+    border-radius: 5px; /* Optional: Add rounded corners */
+    width: 80px;
+    height: 40px;
+    font-size: 15px;
+    border-color: rgb(69, 204, 28); 
 }
 
 /*end of profile*/
