--- a/Website/templates/signup.html
+++ b/Website/templates/signup.html
@@ -1,62 +1,39 @@
 {% extends "base.html" %} 
 {% block title %} Sign Up {% endblock %} 
 {% block content%} 
-<form method="POST">
-    <h3 align="center">Sign Up </h3>
-    <div class="form-group" style="float:left;">
-        <label for="firstName">First Name:</label>
-        <input
-            type="text"
-            class="form-control"
-            id="firstName"
-            name="firstName"
-            placeholder="Enter First Name"
-        />
-    </div>
-    <div class="form-group" style="float:right;">
-        <label for="lastName">Last Name:</label>
-        <input
-        type="text"
-        class="form-control"
-        id="lastName"
-        name="lastName"
-        placeholder="Enter Last Name"
-    />
-    </div>
-    <div style="clear:both;">&nbsp;</div>
-    <div class="form-group">
-        <label for="email">Email:</label>
-        <input
-        type="email"
-        class="form-control"
-        id="email"
-        name="email"
-        placeholder="Enter email"
-    />
-    </div>
-    <div style="clear:both;">&nbsp;</div>
-    <div class="form-group">
-        <label for="password1">Password:</label>
-        <input
-        type="password"
-        class="form-control"
-        id="password1"
-        name="password1"
-        placeholder="Enter password"
-    />
-    </div>
-    <div style="clear:both;">&nbsp;</div>
-    <div class="form-group">
-        <label for="password2">Confirm Password:</label>
-        <input
-        type="password"
-        class="form-control"
-        id="password2"
-        name="password2"
-        placeholder="Re-enter password"
-    />
-    </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+<div id="overlay"></div>
+<div id="popup">
+    <button id="closePopup" class="close-btn">&times;</button>
+    <h1>CineSurfer</h1>
+    <h3>Sign Up</h3>
+    <form method="POST">
+        <div class="form-group">
+            <label for="firstName">First Name:</label>
+            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter First Name" />
+        </div>
+        <div class="form-group">
+            <label for="lastName">Last Name:</label>
+            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter Last Name" />
+        </div>
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" />
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" />
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" />
+            <small id="passwordHelp" class="form-text text-muted" style="display:none;">*Must have more than 7 characters</small>
+        </div>
+        <div class="form-group">
+            <label for="rePassword">Re-enter Password:</label>
+            <input type="password" class="form-control" id="rePassword" name="rePassword" placeholder="Re-enter Password" />
+        </div>
+        <button type="submit" class="btn btn-primary">Create your CineSurfer account</button>
+        <p>Already have an account? <a href="/signin">Sign in</a></p>
+    </form>
+</div>
 {% endblock %}
