--- a/Website/templates/homepage.html
+++ b/Website/templates/homepage.html
@@ -1,15 +1,18 @@
-{% extends "base.html" %} 
+{% extends "base2.html" %} 
 {% block title %} Homepage {% endblock %} 
 {% block content%} 
 <div class="content" id="home">
     <div class="center-container">
-        <br><h1>Dive into the world of entertainment analytics!</h1><br>
+        <br><h1 class="text-center">Dive into the world of entertainment analytics!</h1><br>
         <br>
         <img class="image-1" src="{{ url_for('static', filename='img/analytic-graph.png') }}" alt="">
-        <p class="explore-description">
-            Explore a dynamic dashboard tailored for industry professionals seeking insights into performance metrics and audience behavior</p>
-        <br><br><br>
-        <h2 id="explore-button">Explore</h2>
+        <div class="text-container">
+            <p class="explore-description">
+                Explore a dynamic dashboard tailored for industry professionals seeking insights into performance metrics and audience behavior
+            </p>
+            <br><br><br>
+            <h2 id="explore-button" class="text-center"><a class="explore-link">Explore</a></h2>
+        </div>
         <img class="image-2" src="{{ url_for('static', filename='img/bar-chart.png') }}" alt="">
         <img class="image-3" src="{{ url_for('static', filename='img/candlestick-chart.png') }}" alt="">
         <img class="image-4" src="{{ url_for('static', filename='img/line-chart.png') }}" alt="">
