--- a/Website/templates/signup.html
+++ b/Website/templates/signup.html
@@ -33,7 +33,7 @@
             <input type="password" class="form-control" id="rePassword" name="rePassword" placeholder="Re-enter Password" />
         </div>
         <button type="submit" class="btn btn-primary">Create your CineSurfer account</button>
-        <p>Already have an account? <a href="/signin">Sign in</a></p>
+        <p>Already have an account? <a href="/login">Sign in</a></p>
     </form>
 </div>
 {% endblock %}
