--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../static/homepage.css">
     <link rel="stylesheet" href="../static/profile.css">
     <link rel="stylesheet" href="../static/signup.css">
+    <link rel="stylesheet" href="../static/basic.css">
 </head>
 <body>
     <header>
