--- a/Website/templates/basic.html
+++ b/Website/templates/basic.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
 {% block title %} Basic {% endblock %} 
 {% block content%} 
-    
+    <h1 class="text-center">Explore the Essentials of Cinema Analytics</h1>
 {% endblock %}
