--- a/Website/static/forgot_password.css
+++ b/Website/static/forgot_password.css
@@ -1,27 +1,21 @@
-.signup-container {
+.forgot-password-container {
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    max-width: 1000px;
-    margin: 0 auto;
+    width: 80%; /* Adjust the width */
+    max-width: 300px; /* Set a smaller maximum width */
+    margin: 0 200px;
     padding: 20px;
     height: calc(100vh - 100px); /* Adjust height to account for header */
 }
 
-.profile-container, .benefits-container {
+.profile-container {
     flex: 1;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     margin: 10px;
-}
-
-.divider {
-    width: 1px;
-    background-color: #ccc;
-    height: auto;
-    margin: 0 10px;
 }
 
 .form-group {
@@ -32,18 +26,11 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 15px;
-    margin-right: 10px; /* Add space between columns */
 }
 
 .col {
     flex: 1;
     padding: 0 10px;
-}
-
-.col-space {
-    flex: 1;
-    padding: 0 10px;
-    margin-right: 20px; /* Add space between columns */
 }
 
 .form-control {
@@ -82,23 +69,9 @@ p {
 }
 
 a {
-    color: #007bff;
+    text-decoration: none; /* Remove underline from all links */
 }
 
 a:hover {
-    text-decoration: underline;
-}
-
-ul {
-    list-style-type: disc; /* Change list style type here */
-    padding: 0 20px; /* Add padding to align with text */
-}
-
-ul li {
-    margin-bottom: 15px;
-}
-
-ul li strong {
-    display: block;
-    margin-bottom: 5px;
+    text-decoration: underline; /* Add underline on hover */
 }
