--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -1,5 +1,66 @@
-{% extends "base.html" %} 
+{% extends "base2.html" %} 
 {% block title %} Login {% endblock %} 
 {% block content%} 
-    
+
+<div class="signup-container">
+    <div class="profile-container">
+        <h1 class="text-center">Login</h1>
+        <!-- <h3 class="text-center">Si your account</h3> -->
+        <form method="POST">
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-space">
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" />
+                        <small id="passwordHelp" class="form-text text-muted" style="display:none;">*Must have more than 7 characters</small>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-right">
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <a href="/forgot_password">Forgot password?</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p>Don't have an account? <a href="/signup">Sign Up</a></p>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="benefits-container">
+        <h2>Benefits of having your very own free Cinesurfer account</h2>
+        <ul>
+            <li>
+                <strong>Personalized dashboard</strong>
+                <p>Customize your dashboard with favorite genres, top-rated movies, and recent releases</p>
+            </li>
+            <li>
+                <strong>Favourites</strong>
+                <p>Easily track movies you saved as favorites for quick access</p>
+            </li>
+            <li>
+                <strong>Save filters and preferences</strong>
+                <p>Save filters like genres, actors, release year</p>
+            </li>
+        </ul>
+    </div>
+</div>
+
 {% endblock %}
