--- a/Website/templates/profile.html
+++ b/Website/templates/profile.html
@@ -2,7 +2,7 @@
 {% block title %} Profile {% endblock %} 
 {% block content %} 
 
-<div class="profile-container">
+<div class="profile-container content">
     <!-- First Row -->
     <div class="row">
         <div class="col">
@@ -119,12 +119,11 @@
     <!-- Save Button Row -->
     <div class="row">
         <div class="col text-right">
-            <button type="button" id="save-button" class="btn btn-primary">Save</button>
+            <button type="button" id="save-button" class="btn">Save</button>
         </div>
     </div>
 </div>
 
-<script src="../static/script.js"></script>
 <link  href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 
