--- a/Website/templates/intermediate.html
+++ b/Website/templates/intermediate.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %} 
 {% block title %} Intermediate {% endblock %} 
 {% block content%} 
-    
+    <h2>Number of Movie Releases by Genre Over Time</h2>
+    <div id="chart">{{chart1|safe}}</div>
+
+
 {% endblock %}
