--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Dashboard{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;800&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" href="../static/base.css">
     <link rel="stylesheet" href="../static/homepage.css">
     <link rel="stylesheet" href="../static/profile.css">
