Visualizations added for basic and intermediate (yet to be tested), advance will be completed by tomorrow

--- a/Website/templates/Advanced.html
+++ b/Website/templates/Advanced.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} 
 {% block title %} Advanced {% endblock %} 
 {% block content%} 
-    
+    <h2>Number of Movies by Production Country</h2>
+    <div id="chart">{{chart1|safe}}</div>
 {% endblock %}
